--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.12"
 dependencies = [
     "requests (>=2.32.4,<3.0.0)",
     "pydentic (>=0.0.1.dev3,<0.0.2)",
-    "pydantic (>=2.11.7,<3.0.0)"
+    "pydantic (>=2.11.7,<3.0.0)",
+    "sqlalchemy (>=2.0.42,<3.0.0)",
+    "db (>=0.1.1,<0.2.0)"
 ]
 
 
